# Squirrel

./: CMakeLists.txt  README.md  Squirrel.pro  build.bat  qml.qrc
qml/: Login.qml  Main.qml
rcc/: qrc_qml.cpp
src/: main.cpp
